# gtavl

./: CMakeLists.txt  CMakeSettings.json  GTA5_launcher.cpp  GTA5_launcher.h  GTA5_launcher.rc  PlayGTAV.cpp  PlayGTAV.rc  README.md  build.bat  encrypt.cpp
.github/workflows/: build-msvc-x64-2.yml  build-msvc-x64-3.yml  build-msvc-x64.yml
